# django-starter

./: .env.sample  .gitignore  README.md  pyproject.toml
config/: asgi.py  env.py  urls.py
config/settings/: base.py  production.py
core/: cprocs.py  models.py  urls.py  views.py
locale/da/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.po
requirements/: base.txt  dev.txt  prod.txt  test.txt
static/img/: .keep
templates/: base.html
templates/core/: about.html  home.html
templates/partials/: navbar-bs5.html  navbar.html
templates/users/: profile.html  user.html
users/: admin.py  allauth.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_created_at_alter_user_id_alter_user_phone_and_more.py
