[project]
name = "django-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-allauth>=65.16.1",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "psycopg[binary]>=3.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
prod = [
    "gunicorn>=25.3.0",
]
